[gd_scene load_steps=45 format=1]

[ext_resource path="res://res/back.png" type="Texture" id=1]
[ext_resource path="res://res/light.png" type="Texture" id=2]
[ext_resource path="res://res/dome.png" type="Texture" id=3]
[ext_resource path="res://res/interior.png" type="Texture" id=4]
[ext_resource path="res://res/floor.png" type="Texture" id=5]
[ext_resource path="res://Bed.gd" type="Script" id=6]
[ext_resource path="res://res/bed.png" type="Texture" id=7]
[ext_resource path="res://Piano.gd" type="Script" id=8]
[ext_resource path="res://Books.gd" type="Script" id=9]
[ext_resource path="res://EnergyRack.gd" type="Script" id=10]
[ext_resource path="res://res/energyrack.png" type="Texture" id=11]
[ext_resource path="res://Workbench.gd" type="Script" id=12]
[ext_resource path="res://O2Generator.gd" type="Script" id=13]
[ext_resource path="res://res/o2generator1.png" type="Texture" id=14]
[ext_resource path="res://res/o2generator2.png" type="Texture" id=15]
[ext_resource path="res://res/o2generator3.png" type="Texture" id=16]
[ext_resource path="res://res/o2generator4.png" type="Texture" id=17]
[ext_resource path="res://res/o2generator5.png" type="Texture" id=18]
[ext_resource path="res://res/o2generator_idle.png" type="Texture" id=19]
[ext_resource path="res://Heater.gd" type="Script" id=20]
[ext_resource path="res://res/heater.png" type="Texture" id=21]
[ext_resource path="res://res/heater_idle.png" type="Texture" id=22]
[ext_resource path="res://res/seafloor.png" type="Texture" id=23]
[ext_resource path="res://res/darkness.png" type="Texture" id=24]
[ext_resource path="res://Character.gd" type="Script" id=25]
[ext_resource path="res://res/character1.png" type="Texture" id=26]
[ext_resource path="res://res/character2.png" type="Texture" id=27]
[ext_resource path="res://res/character3.png" type="Texture" id=28]
[ext_resource path="res://res/character4.png" type="Texture" id=29]
[ext_resource path="res://res/character5.png" type="Texture" id=30]
[ext_resource path="res://res/character6.png" type="Texture" id=31]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=11]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=12]

animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="CapsuleShape2D" id=9]

custom_solver_bias = 0.0
radius = 10.0
height = 20.0

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]

resource/name = "WalkLeftAnimation"
length = 0.3
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("WalkLeft:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=5]

resource/name = "WalkRightAnimation"
length = 0.3
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("WalkRight:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=6]

resource/name = "WalkRightAnimation"
length = 0.3
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("WalkRight:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 5 ]
}

[node name="Main" type="Node2D"]

transform/scale = Vector2( 2, 2 )

[node name="Back" type="Node2D" parent="."]

z/z = 2

[node name="BackSprite" type="Sprite" parent="Back"]

transform/pos = Vector2( -0.407257, 0 )
z/z = -1
texture = ExtResource( 1 )
offset = Vector2( 256, 192 )

[node name="Light" type="Sprite" parent="Back"]

texture = ExtResource( 2 )
offset = Vector2( 256, 192 )

[node name="Dome" type="Sprite" parent="Back"]

texture = ExtResource( 3 )
offset = Vector2( 256, 192 )

[node name="Interior" type="Sprite" parent="Back"]

texture = ExtResource( 4 )
offset = Vector2( 256, 192 )

[node name="Floor" type="Sprite" parent="Back"]

z/z = 1
texture = ExtResource( 5 )
offset = Vector2( 256, 192 )

[node name="Bed" type="StaticBody2D" parent="Back"]

editor/display_folded = true
transform/pos = Vector2( 372, 222 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2, 0, 0, 1, 15, 15 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back/Bed"]

transform/pos = Vector2( 15, 15 )
transform/scale = Vector2( 2, 1 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Back/Bed"]

texture = ExtResource( 7 )

[node name="Piano" type="StaticBody2D" parent="Back"]

editor/display_folded = true
transform/pos = Vector2( 195, 237 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 2, 0, 0, 1.1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back/Piano"]

transform/scale = Vector2( 2, 1.1 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="Books" type="StaticBody2D" parent="Back"]

editor/display_folded = true
transform/pos = Vector2( 323, 230 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 2.43, 0, 0, 2, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back/Books"]

transform/scale = Vector2( 2.43, 2 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="EnergyRack" type="StaticBody2D" parent="Back"]

editor/display_folded = true
transform/pos = Vector2( 192, 350 )
input/pickable = true
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 2.8, 0, 0, 2, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back/EnergyRack"]

transform/scale = Vector2( 2.8, 2 )
shape = SubResource( 10 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Back/EnergyRack"]

transform/pos = Vector2( -192, -350 )
texture = ExtResource( 11 )
offset = Vector2( 256, 192 )

[node name="Workbench" type="StaticBody2D" parent="Back"]

editor/display_folded = true
transform/pos = Vector2( 298, 290 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 2.8, 0, 0, 1.7, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back/Workbench"]

transform/scale = Vector2( 2.8, 1.7 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="O2Generator" type="StaticBody2D" parent="Back"]

editor/display_folded = true
transform/pos = Vector2( 125, 359 )
input/pickable = true
shapes/0/shape = SubResource( 11 )
shapes/0/transform = Matrix32( 2, 0, 0, 1.1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back/O2Generator"]

visibility/behind_parent = true
transform/scale = Vector2( 2, 1.1 )
shape = SubResource( 11 )
trigger = false
_update_shape_index = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Back/O2Generator"]

frames = SubResource( 12 )
animation = "default"
playing = true

[node name="IdleSprite" type="Sprite" parent="Back/O2Generator"]

visibility/visible = false
texture = ExtResource( 19 )

[node name="Heater" type="StaticBody2D" parent="Back"]

editor/display_folded = true
transform/pos = Vector2( 300, 362 )
input/pickable = true
shapes/0/shape = SubResource( 13 )
shapes/0/transform = Matrix32( 2.2, 0, 0, 1.3, 0, -5 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 20 )

[node name="SpriteOn" type="Sprite" parent="Back/Heater"]

texture = ExtResource( 21 )

[node name="SpriteOff" type="Sprite" parent="Back/Heater"]

texture = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back/Heater"]

transform/pos = Vector2( 0, -5 )
transform/scale = Vector2( 2.2, 1.3 )
shape = SubResource( 13 )
trigger = false
_update_shape_index = 0

[node name="WaterFloor" type="Sprite" parent="Back"]

z/z = 5
texture = ExtResource( 23 )
offset = Vector2( 256, 192 )

[node name="Sprite" type="Sprite" parent="Back"]

visibility/visible = false
z/z = 10
texture = ExtResource( 24 )
offset = Vector2( 256, 192 )

[node name="StairDownFloor2" type="Area2D" parent="Back"]

editor/display_folded = true
transform/pos = Vector2( 108, 240 )
input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back/StairDownFloor2"]

shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="Floor2Down" type="Area2D" parent="Back"]

editor/display_folded = true
transform/pos = Vector2( 98, 235 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back/Floor2Down"]

shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="Floor15" type="Area2D" parent="Back"]

editor/display_folded = true
transform/pos = Vector2( 143, 260 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back/Floor15"]

shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="Floor05" type="Area2D" parent="Back"]

editor/display_folded = true
transform/pos = Vector2( 123, 320 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back/Floor05"]

shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="Floor1Up" type="Area2D" parent="Back"]

editor/display_folded = true
transform/pos = Vector2( 99, 275 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 0.1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back/Floor1Up"]

transform/scale = Vector2( 0.1, 1 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="Floor1Down" type="Area2D" parent="Back"]

editor/display_folded = true
transform/pos = Vector2( 69, 295 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back/Floor1Down"]

shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="Floor0Up" type="Area2D" parent="Back"]

editor/display_folded = true
transform/pos = Vector2( 70, 365 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back/Floor0Up"]

shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="Character" type="KinematicBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 250, 229 )
z/z = 3
input/pickable = false
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 0.3, 0, 0, 0.8, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 25 )

[node name="WalkRight" type="AnimatedSprite" parent="Character"]

frames = SubResource( 1 )
animation = "default"
frame = 5

[node name="WalkLeft" type="AnimatedSprite" parent="Character"]

frames = SubResource( 1 )
animation = "default"
frame = 5
flip_h = true

[node name="Animation" type="AnimationPlayer" parent="Character"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/WalkLeftAnimation = SubResource( 4 )
anims/WalkRightAnimation = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="WalkRightAnimation" type="AnimationPlayer" parent="Character"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/WalkRightAnimation = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character"]

transform/scale = Vector2( 0.3, 0.8 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 0

[connection signal="input_event" from="Back/Bed" to="Back/Bed" method="_on_Bed_input_event"]

[connection signal="input_event" from="Back/Piano" to="Back/Piano" method="_on_StaticBody2D_input_event"]

[connection signal="input_event" from="Back/Piano" to="Back/Piano" method="_on_Piano_input_event"]

[connection signal="input_event" from="Back/Books" to="Back/Books" method="_on_Books_input_event"]

[connection signal="input_event" from="Back/EnergyRack" to="Back/EnergyRack" method="_on_EnergyRack_input_event"]

[connection signal="input_event" from="Back/Workbench" to="Back/Workbench" method="_on_Workbench_input_event"]

[connection signal="input_event" from="Back/O2Generator" to="Back/O2Generator" method="_on_O2Generator_input_event"]

[connection signal="input_event" from="Back/Heater" to="Back/Heater" method="_on_Heater_input_event"]

[connection signal="body_enter" from="Back/Floor2Down" to="Character" method="_on_Floor2Down_body_enter"]

[connection signal="body_enter" from="Back/Floor15" to="Character" method="_on_Floor15_body_enter"]

[connection signal="body_enter" from="Back/Floor05" to="Character" method="_on_Floor05_body_enter"]

[connection signal="body_enter" from="Back/Floor1Up" to="Character" method="_on_Floor1Up_body_enter"]

[connection signal="body_enter" from="Back/Floor1Down" to="Character" method="_on_Floor1Down_body_enter"]

[connection signal="body_enter" from="Back/Floor0Up" to="Character" method="_on_Floor0Up_body_enter"]


